--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,3 +1,15 @@
 .nav{
     background-color: var(--theme);
+    padding:1rem 1.5rem;
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+    p{
+        font-size: clamp(1.1rem, 1rem + 0.3333vw, 1.3rem);
+    }
 }
