--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 /* @import "~antd/dist/antd.css"; */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 :root {
-  --theme: #2970ff;
+  --theme: #0036A3;
   --black: #212121;
   --white: #fff;
-  --shadow: rgba(227,227,227,0.75);
+  --shadow: 0px 0px 30px 8px rgba(227,227,227,0.75);
 }
 body {
   margin: 0;
