--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,6 +1,6 @@
 .nav{
     background-color: var(--theme);
-    padding:1rem 1.5rem;
+    padding:0.5rem 1.5rem;
     position: sticky;
     top: 0;
     left: 0;
@@ -9,7 +9,32 @@
     justify-content: space-between;
     align-items: center;
     
-    p{
+    .title{
+        color: white;
+        font-weight: 500;
         font-size: clamp(1.1rem, 1rem + 0.3333vw, 1.3rem);
     }
+    
+    .logo{
+        display: flex;
+        justify-items: center;
+        align-items: center;
+
+
+        .avatar{
+            border-radius: 50%;
+            height:30px;
+            width: 30px;
+            object-fit: cover;
+        }
+        .logoLink{
+            flex: 1;
+            font-size: clamp(1rem, 0.9rem + 0.3333vw, 1.2rem);
+            color: white;
+            font-weight: 500;
+            cursor: pointer;
+            margin-left: 0.8rem;
+        }
+    }
+
 }
