--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
+    z-index: 10000;
     .title{
         color: white;
         font-weight: 500;
