--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -5,7 +5,7 @@
     top: 0;
     left: 0;
     width: 100;
-    
+    height: 2.5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
