--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -4,7 +4,7 @@
     position: sticky;
     top: 0;
     left: 0;
-    width: 100;
+    width: 100vw;
     height: 2.5rem;
     display: flex;
     justify-content: space-between;
